overflow fix, scroll down on Linux added

--- a/fake-update/css/style.css
+++ b/fake-update/css/style.css
@@ -72,6 +72,16 @@ body{
     color: green;
 }
 
+#Linux{
+    overflow-y: auto;
+    overscroll-behavior-y: contain;
+    scroll-snap-type: y mandatory;
+}
+
+#Linux > p:last-child {
+    scroll-snap-align: start;
+}
+
 /* Mobile View */
 @media only screen and (max-width: 479px){
     .wrapper > div{
